@@ -42,11 +42,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.oracle</groupId>
-    <artifactId>simplelanguage-parent</artifactId>
+    <groupId>org.solvik</groupId>
+    <artifactId>solvik-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>launcher</artifactId>
+  <artifactId>solvik-launcher</artifactId>
   <build>
     <plugins>
       <plugin>
@@ -60,6 +60,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --enable-native-access=org.graalvm.truffle
+            --sun-misc-unsafe-memory-access=allow
+          </argLine>
+        </configuration>
       </plugin>
     </plugins>
     <pluginManagement>
@@ -77,10 +83,22 @@
       <version>${graalvm.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.oracle</groupId>
-      <artifactId>simplelanguage</artifactId>
+      <groupId>org.solvik</groupId>
+      <artifactId>solvik</artifactId>
       <version>1.0.0-SNAPSHOT</version>
       <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-commons</artifactId>
+      <version>1.14.4</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
